--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
+	<script type="text/javascript" src="https://unpkg.com/@zxing/library@latest/umd/index.min.js"></script>
 	<script src="src/main.js"></script>
 </body>
 </html>
